Long description no longer overflows from the box

--- a/cake2cribs/app/webroot/less/Listing/full_page.less
+++ b/cake2cribs/app/webroot/less/Listing/full_page.less
@@ -6,6 +6,8 @@
 .full_page
 {
 	padding-top: 60px;
+	background-color: #b6cfe8;
+		
 	.basic_info, .more_info, .contact_info
 	{
 		border-radius: 4px;
@@ -406,7 +408,7 @@
 			}
 			.span12
 			{
-				margin: 6px 10px;
+				padding: 2px 5px;
 			}
 			background-color: white;
 			border-radius: 4px;
